--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
             <a href='/docs/friends'>Друзья</a><br>
             <a href='/docs/wall'>Стена</a><br>
             <a href='/docs/game'>Взаимодействие с игрой</a>
+            <!--<a href='/docs/payment'>Взаимодействие с платежной системой</a>-->
         </p>
 
     </header>
