Payment documentation updated;

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
             <a href='/docs/users'>Пользвоатели</a><br>
             <a href='/docs/friends'>Друзья</a><br>
             <a href='/docs/wall'>Стена</a><br>
-            <a href='/docs/game'>Взаимодействие с игрой</a>
-            <!--<a href='/docs/payment'>Взаимодействие с платежной системой</a>-->
+            <a href='/docs/game'>Взаимодействие с игрой</a><br>
+            <a href='/docs/payment'>Платежный API</a><br>
         </p>
 
     </header>
