added shop docs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
             <a href='/docs/wall'>Стена</a><br>
             <a href='/docs/game'>Взаимодействие с игрой</a><br>
             <a href='/docs/payment'>Платежный API</a><br>
+            <a href='/docs/shop'>Работа с магазином</a><br>
         </p>
 
     </header>
