request.window added;

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
             <a href='/docs/users'>Пользвоатели</a><br>
             <a href='/docs/friends'>Друзья</a><br>
             <a href='/docs/wall'>Стена</a><br>
+            <a href='/docs/notification'>Уведомления</a><br>
             <a href='/docs/game'>Взаимодействие с игрой</a><br>
             <a href='/docs/payment'>Платежный API</a><br>
             <a href='/docs/shop'>Работа с магазином</a><br>
