added english language;

--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Playvision by playvision</title>
+    <title>Playvision</title>
 
     <link rel="stylesheet" href="../../stylesheets/styles.css">
     <link rel="stylesheet" href="../../stylesheets/pygment_trac.css">
@@ -15,23 +15,25 @@
 <body>
 <div class="wrapper">
     <div class="language">
-        RU | <a href="/en">EN</a>
+        <a href="/">RU</a> | EN
     </div>
     <header>
-        <a href='/'><h1>Playvision</h1></a>
+        <a href='/en'><h1>Playvision</h1></a>
         <p></p>
+
+
         <p class="view">
-            <a href='/app'>Параметры запуска приложения</a>
+            <a href='/en/main/startap.html'>Application startup options</a>
         </p>
         <p class="view">
-            <a href='/docs'>Запросы к api</a><br>
-            <a href='/docs/users'>Пользвоатели</a><br>
-            <a href='/docs/friends'>Друзья</a><br>
-            <a href='/docs/wall'>Стена</a><br>
-            <a href='/docs/notification'>Уведомления</a><br>
-            <a href='/docs/game'>Взаимодействие с игрой</a><br>
-            <a href='/docs/payment'>Платежный API</a><br>
-            <!--<a href='/docs/shop'>Работа с магазином</a><br>-->
+            <a href='/en/main'>API requests</a><br>
+            <a href='/en/users'>Users</a><br>
+            <a href='/en/friends'>Friends</a><br>
+            <a href='/en/wall'>Wall</a><br>
+            <a href='/en/notification'>Notifications</a><br>
+            <a href='/en/game'>Game interaction</a><br>
+            <a href='/en/payment'>Payment API</a><br>
+            <!--<a href='/en/shop'>Store interaction</a><br>-->
         </p>
 
     </header>
