--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -45,7 +45,7 @@
 
     </footer>
 </div>
-<script src="javascripts/scale.fix.js"></script>
+<script src="/javascripts/scale.fix.js"></script>
 
 </body>
 </html>
