--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         </p>
         <p class="view">
             <a href='/docs'>Запросы к api</a><br>
-            <a href='/docs/users'>Пользвоатели</a><br>
+            <a href='/docs/users'>Пользователи</a><br>
             <a href='/docs/friends'>Друзья</a><br>
             <a href='/docs/wall'>Стена</a><br>
             <a href='/docs/notification'>Уведомления</a><br>
