Added Javascript SDK documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href='/docs/notification'>Уведомления</a><br>
             <a href='/docs/game'>Взаимодействие с игрой</a><br>
             <a href='/docs/payment'>Платежный API</a><br>
+            <a href='/docs/sdk'>Javascript SDK</a><br>
             <!--<a href='/docs/shop'>Работа с магазином</a><br>-->
         </p>
 
