--- a/_layouts/en.html
+++ b/_layouts/en.html
@@ -33,6 +33,7 @@
             <a href='/en/notification'>Notifications</a><br>
             <a href='/en/game'>Game interaction</a><br>
             <a href='/en/payment'>Payment API</a><br>
+            <a href='/en/sdk'>Javascript SDK</a><br>
             <!--<a href='/en/shop'>Store interaction</a><br>-->
         </p>
 
